[gd_scene load_steps=4 format=3 uid="uid://dcygrijkhp1wc"]

[ext_resource type="Script" path="res://resources/scenes/levels/level.gd" id="1_vdjt7"]
[ext_resource type="PackedScene" uid="uid://dhq26ump4dgkr" path="res://resources/scenes/objects/gate.tscn" id="3_0kpjc"]
[ext_resource type="PackedScene" uid="uid://o3ed3n7ummfb" path="res://resources/scenes/player/player.tscn" id="4_fj1ag"]

[node name="Level" type="Node2D"]
script = ExtResource("1_vdjt7")

[node name="Gate" parent="." instance=ExtResource("3_0kpjc")]
position = Vector2(544, -366)

[node name="Player" parent="." instance=ExtResource("4_fj1ag")]
position = Vector2(526, 538)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="grenade_fire" from="Player" to="." method="_on_player_grenade_fire"]
[connection signal="laser_fire" from="Player" to="." method="_on_player_laser_fire"]
